<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="INPUTS" Id="{1851e2c1-dbaa-4e2b-a86d-7c0d6ead8671}">
    <Declaration><![CDATA[VAR_GLOBAL
	ivar_s_Dstartbutton AT %I*: BOOL;
	ivar_s_Dstopbutton AT %I*: BOOL;
	ivar_s_Dresetbutton AT %I*: BOOL;
	ivar_s_Dautoswitch AT %I*: BOOL;
	ivar_s_pusher1_in AT %I*: BOOL;
	ivar_s_pusher1_out AT %I*: BOOL;
	ivar_s_stack1filled AT %I*: BOOL;
	ivar_s_product1 AT %I*: BOOL;
	ivar_s_pusher2_in AT %I*: BOOL;
	ivar_s_pusher2_out AT %I*: BOOL;
	ivar_s_stack2filled AT %I*: BOOL;
	ivar_s_product2 AT %I*: BOOL;
	ivar_s_pusher3_in AT %I*: BOOL;
	ivar_s_pusher3_out AT %I*: BOOL;
	ivar_s_stack3filled AT %I*: BOOL;
	ivar_s_product3 AT %I*: BOOL;
	ivar_s_handlingbusy AT %I*: BOOL;
	ivar_s_Hstartbutton AT %I*: BOOL;
	ivar_s_Hstopbutton AT %I*: BOOL;
	ivar_s_Hresetbutton AT %I*: BOOL;
	ivar_s_Hautoswitch AT %I*: BOOL;
	ivar_s_xpos_at1 AT %I*: BOOL;
	ivar_s_xpos_at2 AT %I*: BOOL;
	ivar_s_xpos_at3 AT %I*: BOOL;
	ivar_s_xpos_atdrop AT %I*: BOOL;
	ivar_s_zpos_atup AT %I*: BOOL;
	ivar_s_zpos_atdown AT %I*: BOOL;
	ivar_s_gripper AT %I*: BOOL;
	ivar_s_transfer_atpickup AT %I*: BOOL;
	ivar_s_transfer_atdrop AT %I*: BOOL;
	ivar_s_transfer_athalfway AT %I*: BOOL;
	ivar_s_vacuum AT %I*: BOOL;
	ivar_s_product4 AT %I*: BOOL;
	ivar_s_testingbusy AT %I*: BOOL;
	ivar_s_Din4 AT %I*: BOOL;
	ivar_s_Din5 AT %I*: BOOL;
	ivar_s_Din6 AT %I*: BOOL;
	ivar_s_Din7 AT %I*: BOOL;
	ivar_s_Hin4 AT %I*: BOOL;
	ivar_s_Hin5 AT %I*: BOOL;
	ivar_s_Hin6 AT %I*: BOOL;
	ivar_s_Hin7 AT %I*: BOOL;
	ivar_a_Dout4 AT %I*: BOOL;
	ivar_a_Dout5 AT %I*: BOOL;
	ivar_a_Dout6 AT %I*: BOOL;
	ivar_a_Dout7 AT %I*: BOOL;
	ivar_a_Hout4 AT %I*: BOOL;
	ivar_a_Hout5 AT %I*: BOOL;
	ivar_a_Hout6 AT %I*: BOOL;
	ivar_a_Hout7 AT %I*: BOOL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>