<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="alg_M_example_controller_godown" Id="{ab316373-b4c6-469b-8ae0-826153098fe4}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION alg_M_example_controller_godown : ARRAY[0..2] OF BOOL
VAR_INPUT
	state: STATE;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[alg_M_example_controller_godown := makeArray0(ivar_s_xpos_at1, ivar_s_xpos_at2, ivar_s_xpos_at3);]]></ST>
    </Implementation>
    <LineIds Name="alg_M_example_controller_godown">
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>